--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,26 @@
 <!doctype html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>MyTestApp</title>
-  <base href="/">
+  <head>
+    <meta charset="utf-8">
+    <title>MyTestApp</title>
+    <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root>Loading...</app-root>
-</body>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
+  </head>
+
+  <body>
+     <nav>
+      <div class="nav-wrapper purple darken-2">
+        <a class="brand-logo center">Testing Angular 2</a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li><a href="/contact">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+
+    <app-root>Loading...</app-root>
+
+  </body>
 </html>
